--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="logo" href="./index.html"> <span class="logo-text-color">Web</span>Studio </a>
           <ul class="top-nav list">
             <li class="item">
-              <a class="nav-link" href="#">Студія</a>
+              <a class="nav-link" href="./index.html">Студія</a>
             </li>
             <li class="item">
               <a class="nav-link" href="./portfolio.html">Портфоліо</a>
@@ -131,8 +131,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">Ігор Дем'яненко</h3>
-              <p class="team-text">Product Designer</p>
+              <div class="team-block">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-text">Product Designer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -141,8 +143,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">Ольга Рєпіна</h3>
-              <p class="team-text">Frontend Developer</p>
+              <div class="team-block">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-text">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -151,8 +155,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">Микола Тарасов</h3>
-              <p class="team-text">Marketing</p>
+              <div class="team-block">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-text">Marketing</p>
+              </div>
             </li>
             <li class="team-item">
               <img
@@ -161,8 +167,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-name">Михайло Єрмаков</h3>
-              <p class="team-text">UI Designer</p>
+              <div class="team-block">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-text">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
