--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
           <a class="logo" href="./index.html"> <span class="logo-text-color">Web</span>Studio </a>
           <ul class="top-nav list">
             <li class="item">
-              <a class="nav-link" href="#">Студія</a>
+              <a class="nav-link" href="./index.html">Студія</a>
             </li>
             <li class="item">
               <a class="nav-link" href="./portfolio.html">Портфоліо</a>
@@ -80,8 +80,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Технокряк</h3>
-                <p class="example-text">Веб-сайт</p>
+                <div class="example-block">
+                  <h3 class="example-title">Технокряк</h3>
+                  <p class="example-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -92,8 +94,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Постер New Orlean vs Golden Star</h3>
-                <p class="example-text">Дизайн</p>
+                <div class="example-block">
+                  <h3 class="example-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="example-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -104,8 +108,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Ресторан Seafood</h3>
-                <p class="example-text">Додаток</p>
+                <div class="example-block">
+                  <h3 class="example-title">Ресторан Seafood</h3>
+                  <p class="example-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -116,8 +122,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Проєкт Prime</h3>
-                <p class="example-text">Маркетинг</p>
+                <div class="example-block">
+                  <h3 class="example-title">Проєкт Prime</h3>
+                  <p class="example-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -128,8 +136,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Проєкт Boxes</h3>
-                <p class="example-text">Додаток</p>
+                <div class="example-block">
+                  <h3 class="example-title">Проєкт Boxes</h3>
+                  <p class="example-text">Додаток</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -140,8 +150,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Inspiration has no Borders</h3>
-                <p class="example-text">Веб-сайт</p>
+                <div class="example-block">
+                  <h3 class="example-title">Inspiration has no Borders</h3>
+                  <p class="example-text">Веб-сайт</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -152,8 +164,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Видання Limited Edition</h3>
-                <p class="example-text">Дизайн</p>
+                <div class="example-block">
+                  <h3 class="example-title">Видання Limited Edition</h3>
+                  <p class="example-text">Дизайн</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -164,8 +178,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Проєкт LAB</h3>
-                <p class="example-text">Маркетинг</p>
+                <div class="example-block">
+                  <h3 class="example-title">Проєкт LAB</h3>
+                  <p class="example-text">Маркетинг</p>
+                </div>
               </a>
             </li>
             <li class="item">
@@ -176,8 +192,10 @@
                   width="370"
                   height="294"
                 />
-                <h3 class="example-title">Growing Business</h3>
-                <p class="example-text">Додаток</p>
+                <div class="example-block">
+                  <h3 class="example-title">Growing Business</h3>
+                  <p class="example-text">Додаток</p>
+                </div>
               </a>
             </li>
           </ul>
